@@ -1,3 +1,6 @@
+2024-05-03 Konstantin Kushnir <chpock@gmail.com>
+	* Fix missed quotes in pages.test
+
 2024-04-29 Konstantin Kushnir <chpock@gmail.com>
 	* Don't install binaries before test/shell/gdb make recipes
 	* Fix the make recipes test/shell/gdb
